# esp32-bus-pirate

./: .gitignore  CI-TEST-SETUP-COMPLETE.md  README.md  cliff.toml  test-build.sh
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agent_tasks/: coordinator-migration-task.md
.github/agents/: bus-mode-engineer.md  coordinator-planner.md  display-touch-developer.md  hal-peripherals-developer.md  protocol-cli-developer.md  testing-ci-engineer.md  ui-developer.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  deploy-docs.yml  release.yml  test.yml
book/: README.md  book.toml
book/src/: README.md  SUMMARY.md  chapter_1.md
book/src/development/: contributing.md  conventional-commits.md  gui.md  rust-migration.md  slint.md  tasks.md
book/src/external-hardware/: can-transceiver.md  peripherals.md  rfid-hardware.md  rfid-wiring.md  rfid.md  subghz-modules.md
book/src/getting-started/: flashing.md  quick-start.md
book/src/hardware/: battery.md  modular-connectors.md  power-consumption.md  power.md  waveshare-s3.md
book/src/mobile/: tauri.md
book/src/modes/: bluetooth.md  can.md  dio.md  ethernet.md  hiz.md  i2c.md  i2s.md  infrared.md  jtag.md  onewire.md  rf24.md  rfid.md  spi.md  subghz.md  threewire.md  twowire.md  uart.md  usb.md  wifi.md
book/src/reference/: hardware-specs.md  messages.md  pins.md
book/src/user-guide/: data-export.md  data-logging.md  overview.md  sd-card.md  serial-cli.md  touch-interface.md
docs/: AGENT-COORDINATION.md  AGENT-INVOCATION-GUIDE.md  AGENT-ISSUES.md  MIGRATION-STATUS.md  MIGRATION-SUMMARY.md  README-NEXT-STEPS.md  protocol.md  rust-migration-design.md
docs/tasks/: PHASE-1-INITIATION.md  README.md  TASK-001-HAL-Implementation.md  TASK-002-Display-Touch-Drivers.md  TASK-003-Protocol-USB-CDC.md  TASK-004-I2C-1Wire-Modes.md  TASK-005-SPI-DIO-LED-Modes.md  TASK-006-UART-IR-I2S-Modes.md  TASK-007-GUI-Implementation.md
rust/: .gitignore  BUILD_FIX.md  Cargo.toml  README.md  TEST-SETUP-SUMMARY.md  TESTING.md  run-tests.sh  rust-toolchain.toml  test-protocol.sh
rust/.cargo/: config.toml
rust/bus-modes/: Cargo.toml
rust/bus-modes/src/: i2c.rs  lib.rs  spi.rs  traits.rs  uart.rs
rust/drivers/: Cargo.toml
rust/drivers/src/: lib.rs
rust/drivers/src/audio/: mod.rs
rust/drivers/src/display/: mod.rs  st7789.rs
rust/drivers/src/imu/: mod.rs
rust/drivers/src/rtc/: mod.rs
rust/drivers/src/touch/: cst328.rs  mod.rs
rust/firmware/: Cargo.toml
rust/firmware/src/: main.rs
rust/firmware/src/transport/: mod.rs  usb_cdc.rs
rust/hal/: CHANGELOG.md  CODE-QUALITY-NOTES.md  Cargo.toml  IMPLEMENTATION-SUMMARY.md  README.md
rust/hal/examples/: basic.rs  i2c_scan.rs
rust/hal/src/: board.rs  lib.rs  pins.rs
rust/hal/src/peripherals/: gpio.rs  i2c.rs  mod.rs  spi.rs  uart.rs  usb.rs
rust/protocol/: Cargo.toml
rust/protocol/.cargo/: config.toml
rust/protocol/src/: codec.rs  lib.rs  message.rs  version.rs
rust/protocol/tests/: codec_tests.rs  integration_tests.rs
tools/: README.md  test_client.py
