[workspace]
members = ["hal", "drivers", "protocol", "bus-modes", "firmware"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["ESP32 Bus Pirate Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/x0f5c3/esp32-bus-pirate"

[workspace.dependencies]
# ESP32-S3 HAL
esp-hal = { version = "0.21", features = ["esp32s3"] }
esp-backtrace = { version = "0.14", features = ["esp32s3", "exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32s3", "log"] }
esp-alloc = { version = "0.5" }

# Embedded HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6"
embedded-io-async = "0.6"

# Graphics and display
embedded-graphics = "0.8"
st7789 = { version = "0.7", default-features = false }
display-interface = "0.5"
display-interface-spi = "0.5"

# Data structures (no_std)
heapless = "0.8"
static_cell = "2.1"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false, features = ["heapless"] }

# CRC and checksums
crc = { version = "3.0", default-features = false }

# Logging
log = { version = "0.4", default-features = false }
defmt = "0.3"

# Utilities
bitflags = "2.6"
embedded-time = "0.12"
fugit = "0.3"

[profile.dev]
# Rust debug is too slow for embedded. Better to use release with debug info.
opt-level = "s"
debug = true

[profile.release]
opt-level = "z"         # Optimize for size
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Better optimization
strip = false           # Keep symbols for debugging
overflow-checks = false # Disable overflow checks in release
