[package]
name = "esp32-bus-pirate-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
postcard.workspace = true
heapless = { workspace = true, features = ["serde"] }
crc.workspace = true

[features]
default = []
